# pineappl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.rst  _config.yml  clippy.toml  flake.nix  generate-coverage.sh  install-capi.sh  install-cli.sh  make-release.sh  make_release.sh  release.sh  ruff.toml  update-wheels-ci.sh
.github/: codecov.yml  fix_fastnlo_warnings.patch  grcov.yml
.github/workflows/: cache-data.yml  capi.yaml  cli-wheels-windows.yml  cli-wheels.yml  container.yml  crates.yml  download-test-data.yml  lhapdf.yaml  macos-release.yml  msrv.yml  pypi.yml  python.yml  release-cli-wheels.yaml  release-crates.yaml  release-wheels.yaml  release.yml  rust.yml  wheels.yml
_includes/: footer.html  head-custom.html
docs/: README.md  cli-reference.md  cli-tutorial.md  installation.md  interpolation-grids.md  maintainers-guide.md  metadata.md  mg5_aMC.md  repository-structure.md
examples/: .gitignore
examples/appl2pine/: appl2pine.cpp  meson.build
examples/basic-capi-usage/: dyaa.cpp
examples/capi-dy-aa/: Makefile  dyaa.cpp
examples/cpp/: Makefile  PineAPPL.hpp  advanced-convolution-deprecated.cpp  advanced-convolution-deprecated.output  advanced-convolution.cpp  advanced-convolution.output  advanced-filling-deprecated.cpp  advanced-filling-v1.cpp  advanced-filling.cpp  deprecated.cpp  (+39 more)
examples/fnlo2pine/: fnlo2pine.cpp  meson.build
lhapdf/: Cargo.toml  build.rs
lhapdf/src/: lib.rs
maintainer/: Containerfile  README.md  build-container.sh  download-test-data.sh  generate-coverage.sh  install-cli-dependencies.sh  install-lhapdf.py  install_lhapdf.py  make-release.sh  patch-binary-wheel.py  patch-macos-wheel.py  patch-macos.wheel.py  patch_binary_wheel.py  reinterpolate-eko.py  test-cli-export.sh  test-cli-import.sh  test-ploughshare-conversion.sh  update-wheels-ci.sh
pineappl/: Cargo.toml  README.md  build.rs
pineappl/examples/: import-yadism-yaml.py  import-yadism-yaml.rs
pineappl/pineappl/: __init__.py  lumi.py
pineappl/src/: bin.rs  boc.rs  convert.rs  convolutions.rs  empty_subgrid.rs  error.rs  evolution.rs  fk_table.rs  fx2.c  grid.rs  import_only_subgrid.rs  import_subgrid.rs  interp_subgrid.rs  interpolation.rs  lagrange_subgrid.rs  lib.rs  lumi.rs  ntuple_grid.rs  ntuple_subgrid.rs  order.rs  packed_array.rs  packed_subgrid.rs  pids.rs  read_only_sparse_subgrid.rs  reference.rs  sparse_array3.rs  subgrid.rs  v0.rs
pineappl/tests/: drell_yan_lo.rs
pineappl/tests/python/: test_bin.py  test_grid.py  test_lagrange_subgrid.py  test_sugrid.py
pineappl_applgrid/: Cargo.toml  build.rs
pineappl_applgrid/src/: applgrid.cpp  applgrid.hpp  calculation.hpp  check_appl_igrid.cpp  helpers.hpp  lib.rs
pineappl_capi/: Cargo.toml  README.md  build.rs  cbindgen.toml
pineappl_capi/include/: PineAPPL.hpp
pineappl_capi/src/: lib.rs
pineappl_capi/src/include/: PineAPPL.hpp
pineappl_cli/: Cargo.toml  README.md  build.rs  pyproject.toml
pineappl_cli/data/: ATLASWPT11-Wplus_tot.root  LHCBWZMU7TEV_PI_part1.root  LHCB_WP_7TEV.pineappl.lz4  LHCB_WP_7TEV_new.pineappl.lz4  atlas-atlas-wpm-arxiv-1109.5141-xsec001.appl
pineappl_cli/src/: analyze.rs  channels.rs  convolute.rs  convolve.rs  delete.rs  diff.rs  evolve.rs  export.rs  help.rs  helpers.rs  import.rs  info.rs  lib.rs  lumi.rs  luminosity.rs  main.rs  merge.rs  obl.rs  ops.rs  optimize.rs  orders.rs  pdf_backend.rs  pdf_uncertainty.rs  pdfunc.rs  plot.py  plot.rs  pull.rs  read.rs  remap.rs  set.rs  subgrid-pull-plot.py  subgrids.rs  sum.rs  uncert.rs  upgrade.rs  write.rs
pineappl_cli/src/evolve/: eko.rs  mod.rs
pineappl_cli/src/export/: applgrid.rs  fastnlo.rs  mod.rs
pineappl_cli/src/import/: applgrid.rs  fastnlo.cpp  fastnlo.hpp  fastnlo.rs  fktable.rs  mod.rs
pineappl_cli/tests/: analyze.rs  channels.rs  convolute.rs  convolve.rs  delete.rs  diff.rs  evolve.rs  export.rs  help.rs  import.rs  info.rs  main.rs  merge.rs  obl.rs  ops.rs  optimize.rs  orders.rs  pdfunc.rs  plot.rs  pull.rs  read.rs  remap.rs  set.rs  subgrids.rs  sum.rs  uncert.rs  upgrade.rs  write.rs
pineappl_core/: Cargo.toml  README.md
pineappl_core/src/: bin.rs  grid.rs  lib.rs  lumi.rs  ntuple_grid.rs
pineappl_core/tests/: drell_yan_lo.rs
pineappl_fastnlo/: Cargo.toml  build.rs
pineappl_fastnlo/src/: fastnlo.cpp  fastnlo.hpp  lib.rs
pineappl_lhapdf/: Cargo.toml
pineappl_py/: .gitignore  Cargo.toml  README.md  dev.requirements.txt  environment.yml  pyproject.toml  requirements.txt  tasks.sh
pineappl_py/doc/: Makefile
pineappl_py/doc/source/: conf.py  index.rst
pineappl_py/doc/source/shared/: roles.rst
pineappl_py/docs/: .gitignore  Makefile
pineappl_py/docs/source/: advanced.ipynb  conf.py  implementation.rst  index.rst  installation.rst  introduction.ipynb  recipes.ipynb  recipes.rst  tutorials.rst
pineappl_py/docs/source/modules/: pineappl.rst
pineappl_py/examples/: import-yadism-yaml-orders.py  import-yadism-yaml.py
pineappl_py/package/: Containerfile  README.md  build.sh  maturin
pineappl_py/pineappl/: __init__.py  bin.py  channel.py  fk_table.py  fktable.py  grid.py  import_only_subgrid.py  lagrange_subgrid.py  lumi.py  subgrid.py  utils.py
pineappl_py/src/: bin.rs  boc.rs  channel.rs  convolutions.rs  evolution.rs  fk_table.rs  grid.rs  import_only_subgrid.rs  import_subgrid.rs  interpolation.rs  lagrange_subgrid.rs  lib.rs  lumi.rs  packed_subgrid.rs  pids.rs  subgrid.rs
pineappl_py/tests/: conftest.py  test_bin.py  test_boc.py  test_channel.py  test_convolutions.py  test_evolution.py  test_fk_table.py  test_grid.py  test_lumi.py  test_subgrid.py  test_sugrid.py
pineappl_v0/: Cargo.toml  README.md
pineappl_v0/src/: bin.rs  boc.rs  convert.rs  convolutions.rs  empty_subgrid.rs  evolution.rs  grid.rs  import_only_subgrid.rs  lagrange_subgrid.rs  lib.rs  ntuple_subgrid.rs  packed_array.rs  pids.rs  sparse_array3.rs  subgrid.rs
pineappl_v0/tests/: drell_yan_lo.rs
src/: bin.rs  lib.rs  lumi.rs  ntuple_grid.rs
tutorial/: mainpage.md
xtask/: Cargo.toml
xtask/src/: install_manpages.rs  main.rs
(+49 files in other folders)
