[workspace]
members = [
    "pineappl",
    "pineappl_applgrid",
    "pineappl_capi",
    "pineappl_cli",
    "pineappl_fastnlo",
    "pineappl_py",
    "xtask",
]
default-members = [
    "pineappl",
    "pineappl_capi",
    "pineappl_cli",
]
resolver = "2"

[workspace.package]
categories = ["science"]
edition = "2021"
keywords = ["high-energy-physics", "physics"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NNPDF/pineappl"
rust-version = "1.70.0"
version = "0.8.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cognitive-complexity = "allow"
module-name-repetitions = "allow"
similar-names = "allow"
too-many-lines = "allow"
unreadable-literal = "allow"

[workspace.lints.rust]
missing-docs = "warn"
unsafe-op-in-unsafe-fn = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
