[workspace]
members = [
    "pineappl",
    "pineappl_applgrid",
    "pineappl_capi",
    "pineappl_cli",
    "pineappl_fastnlo",
    "pineappl_py",
    "pineappl_v0",
    "xtask",
]
default-members = [
    "pineappl",
    "pineappl_capi",
    "pineappl_cli",
    "pineappl_v0",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.68"
arrayvec = "0.7.2"
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { features = ["serde"], version = "2.4.2" }
cc = "1.0.49"
clap = "4.5.28"
clap_mangen = "0.3.0"
cxx = "1.0.161"
cxx-build = "1.0.161"
either = { features = ["serde"], version = "1.8.0" }
enum_dispatch = "0.3.7"
flate2 = "1.0.22"
float-cmp = { default-features = false, version = "0.10.0" }
git-version = "0.3.5"
itertools = "0.14.0"
lhapdf = { package = "managed-lhapdf", version = "0.4.1" }
lz4_flex = "0.13.0"
ndarray = { version = "0.17.2" }
ndarray-npy = { default-features = false, features = ["npz"], version = "0.10.0" }
num-complex = "0.4.4"
numpy = "0.28.0"
pkg-config = "0.3.26"
predicates = { default-features = false, version = "3.1.0" }
prettytable-rs = { default-features = false, features = ["win_crlf"], version = "0.10.0" }
pyo3 = { features = ["extension-module"], version = "0.28.0" }
rand = { default-features = false, version = "0.10.1" }
rand_pcg = { default-features = false, version = "0.10.1" }
rayon = "1.5.1"
rustc-hash = "2"
serde = { features = ["derive"], version = "1.0.130" }
serde_yaml = "0.9.13"
tar = { default-features = false, version = "0.4.45" }
thiserror = "1.0.30"

# workspace crates
pineappl = { path = "pineappl", version = "=1.4.0-alpha1" }
pineappl_applgrid = { path = "pineappl_applgrid", version = "=1.4.0-alpha1" }
pineappl_cli = { path = "pineappl_cli", version = "=1.4.0-alpha1" }
pineappl_fastnlo = { path = "pineappl_fastnlo", version = "=1.4.0-alpha1" }
pineappl_v0 = { path = "pineappl_v0", version = "=1.4.0-alpha1" }

[workspace.package]
categories = ["science"]
edition = "2024"
keywords = ["high-energy-physics", "physics"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NNPDF/pineappl"
rust-version = "1.91.0"
version = "1.4.0-alpha1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cognitive-complexity = "allow"
module-name-repetitions = "allow"
similar-names = "allow"
too-many-lines = "allow"
unreadable-literal = "allow"

[workspace.lints.rust]
missing-docs = "warn"
unsafe-op-in-unsafe-fn = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"

[profile.test-opt]
inherits = "test"
opt-level = 1
debug = false
