[package]
name = "pineappl"
version = "0.5.0-beta"
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/N3PDF/pineappl"
readme = "README.md"
keywords = ["high-energy-physics", "physics"]
categories = ["science"]
description = "PineAPPL is not an extension of APPLgrid"

[dependencies]
anyhow = "1.0"
arrayvec = "0.5"
bincode = "1.0"
enum_dispatch = "0.3.5"
float-cmp = "0.8"
git-version = "0.3"
itertools = "0.10"
lz-fear = "0.1"
ndarray = { features = ["serde"], version = "0.15.3" }
rustc-hash = "1.1.0"
serde = { features = ["derive"], version = "1.0" }
thiserror = "1.0"
indicatif = "0.15.0"

[dev-dependencies]
lhapdf = "0.1.8"
rand = { default-features = false, version = "0.7" }
rand_pcg = { default-features = false, version = "0.2" }
