[package]
name = "pineappl"
version = "0.5.3"
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/N3PDF/pineappl"
readme = "README.md"
keywords = ["high-energy-physics", "physics"]
categories = ["science"]
description = "PineAPPL is not an extension of APPLgrid"

[dependencies]
arrayvec = "0.7.2"
bincode = "1.3.3"
enum_dispatch = "0.3.7"
float-cmp = "0.9.0"
git-version = "0.3.5"
indicatif = "0.16.2"
itertools = "0.10.1"
lz4_flex = "0.9.2"
ndarray = { features = ["serde"], version = "0.15.4" }
rustc-hash = "1.1.0"
serde = { features = ["derive"], version = "1.0.130" }
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.48"
lhapdf = "0.2.0"
rand = { default-features = false, version = "0.8.4" }
rand_pcg = { default-features = false, version = "0.3.1" }
