[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL is not an extension of APPLgrid"
name = "pineappl"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
bincode.workspace = true
bitflags.workspace = true
enum_dispatch.workspace = true
float-cmp.workspace = true
git-version.workspace = true
itertools.workspace = true
lz4_flex.workspace = true
ndarray = { features = ["serde"], workspace = true }
pineappl_v0.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
lhapdf.workspace = true
num-complex.workspace = true
rand.workspace = true
rand_pcg.workspace = true

[features]
static = ["lhapdf/static"]
