[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL's interface to APPLgrid"
name = "pineappl_applgrid"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
cxx = "1.0.65"

[build-dependencies]
cc = "1.0.49"
cxx-build = "1.0.65"
pkg-config = "0.3.26"
