[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL's interface to APPLgrid"
name = "pineappl_applgrid"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
cxx.workspace = true
lhapdf.workspace = true

[build-dependencies]
cc.workspace = true
cxx-build.workspace = true
pkg-config.workspace = true

[features]
static = ["lhapdf/static"]
