[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "C language interface to PineAPPL"
name = "pineappl_capi"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pineappl = { path = "../pineappl", version = "=0.6.2" }
itertools = "0.10.1"

[features]
capi = []

[package.metadata.capi]
min_version = "0.9.0"

[package.metadata.capi.install.include]
asset = [{from = "include/PineAPPL.hpp"}]
