[package]
authors = [
    "Christopher Schwan <handgranaten-herbert@posteo.de>",
    "Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"
]
description = "C language interface to PineAPPL"
name = "pineappl_capi"
readme = "README.md"
publish = false

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pineappl.workspace = true
itertools.workspace = true
ndarray.workspace = true

[features]
capi = []

[package.metadata.capi]
min_version = "0.9.0"
