[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "Read, write, and query PineAPPL grids"
name = "pineappl_cli"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.48"
base64 = { optional = true, version = "0.21.0" }
clap = { features = ["derive"], version = ">=4.2, <4.4" } # 4.4 requires MSRV 1.70
cxx = "1.0.65"
either = { features = ["serde"], optional = true, version = "1.8.0" }
enum_dispatch = "0.3.7"
flate2 = { optional = true, version = "1.0.22" }
float-cmp = "0.9.0"
git-version = "0.3.5"
itertools = "0.10.1"
lhapdf = "0.2.1"
lz4_flex = { optional = true, version = "0.9.2" }
ndarray = "0.15.4"
ndarray-npy = { optional = true, version = "0.8.1" }
pineappl = { path = "../pineappl", version = "=0.6.1" }
pineappl_applgrid = { optional = true, path = "../pineappl_applgrid", version = "=0.6.1" }
pineappl_fastnlo = { optional = true, path = "../pineappl_fastnlo", version = "=0.6.1" }
prettytable-rs = { default-features = false, features = ["win_crlf"], version = "0.10.0" }
rayon = "1.5.1"
serde = { features = ["derive"], optional = true, version = "1.0.130" }
serde_yaml = { optional = true, version = "0.9.13" }
tar = { optional = true, version = "0.4.38" }

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
predicates = "2.1.1"

[[bin]]
name = "pineappl"
path = "src/main.rs"

[package.metadata.docs.rs]
rustc-args = [ "--cfg feature=\"docs-only\"" ]

[features]
applgrid = ["dep:pineappl_applgrid"]
evolve = ["dep:base64", "dep:either", "dep:tar", "dep:lz4_flex", "dep:ndarray-npy", "dep:serde", "dep:serde_yaml"]
fastnlo = ["dep:pineappl_fastnlo"]
fktable = ["dep:flate2",  "dep:tar"]
