[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "Read, write, and query PineAPPL grids"
name = "pineappl_cli"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64 = { optional = true, workspace = true }
clap = { features = ["derive"], workspace = true }
cxx = { optional = true, workspace = true }
either = { optional = true, workspace = true }
enum_dispatch.workspace = true
flate2 = { optional = true, workspace = true }
float-cmp.workspace = true
git-version.workspace = true
itertools.workspace = true
lhapdf.workspace = true
lz4_flex = { optional = true, workspace = true }
ndarray.workspace = true
ndarray-npy = { optional = true, workspace = true }
pineappl.workspace = true
pineappl_applgrid = { optional = true, workspace = true }
pineappl_fastnlo = { optional = true, workspace = true }
prettytable-rs.workspace = true
rayon.workspace = true
serde = { optional = true, workspace = true }
serde_yaml = { optional = true, workspace = true }
tar = { optional = true, workspace = true }

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true

[[bin]]
name = "pineappl"
path = "src/main.rs"

[package.metadata.docs.rs]
rustc-args = [ "--cfg feature=\"docs-only\"" ]

[features]
applgrid = ["dep:cxx", "dep:pineappl_applgrid"]
evolve = ["dep:base64", "dep:either", "dep:tar", "dep:lz4_flex", "dep:ndarray-npy", "dep:serde", "dep:serde_yaml"]
fastnlo = ["dep:cxx", "dep:pineappl_fastnlo"]
fktable = ["dep:flate2",  "dep:tar"]
static = ["lhapdf/static", "pineappl/static", "pineappl_applgrid?/static", "pineappl_fastnlo?/static"]
