[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pineappl-cli"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version", "description", "readme", "authors", "license", "keywords"]

[project.urls]
homepage = "https://nnpdf.github.io/pineappl/docs/"
documentation = "https://nnpdf.github.io/pineappl/docs/cli-tutorial.html"
changelog = "https://nnpdf.github.io/pineappl/CHANGELOG.html"

[tool.maturin]
bindings = "bin"
all-features = true
