[package]
name = "pineappl_core"
version = "0.1.0"
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/N3PDF/pineappl"
keywords = ["high-energy-physics", "physics"]
categories = ["science"]
description = "PineAPPL is not an extension of APPLgrid"

[dependencies]
serde = { features = ["derive"], version = "1.0" }
typetag = "0.1"
