[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL's interface to fastNLO"
name = "pineappl_fastnlo"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cxx = { version = "1.0.65" }
thiserror = "1.0.30"

[build-dependencies]
cxx-build = { version = "1.0.65" }
