[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL's interface to fastNLO"
name = "pineappl_fastnlo"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
cxx = "1.0.130"
thiserror = "1.0.30"

[build-dependencies]
cxx-build = "1.0.130"
pkg-config = "0.3"

[features]
static = []
