[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL's interface to fastNLO"
name = "pineappl_fastnlo"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
cxx.workspace = true
thiserror.workspace = true

[build-dependencies]
cxx-build.workspace = true
pkg-config.workspace = true

[features]
static = []
