[package]
name = "pineappl_py"
version = "0.5.7"
authors = [
    "Christopher Schwan <handgranaten-herbert@posteo.de>",
    "Alessandro Candido <candido.ale@gmail.com>",
    "Felix Hekhorn <felix.hekhorn@mi.infn.it>"
]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/N3PDF/pineappl"
readme = "README.md"
keywords = ["high-energy-physics", "physics"]
categories = ["science"]
description = "Python bindings to PineAPPL"
rust-version = "1.56.1"

[package.metadata.maturin]
name = "pineappl"

[lib]
name = "pineappl"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.9"
ndarray = "0.15.3"
numpy = "0.16.2"
pineappl = { path = "../pineappl", version = "0.5.7" }
pyo3 = { features = ["extension-module"], version = "0.16.4" }
