[package]
authors = [
    "Christopher Schwan <handgranaten-herbert@posteo.de>",
    "Alessandro Candido <candido.ale@gmail.com>",
    "Felix Hekhorn <felix.hekhorn@mi.infn.it>"
]
description = "Python bindings to PineAPPL"
name = "pineappl_py"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.maturin]
name = "pineappl"

[lib]
name = "pineappl"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.1"
ndarray = "0.15.4"
numpy = "0.21.0"
pineappl = { path = "../pineappl", version = "=0.8.4" }
pyo3 = { features = ["extension-module"], version = "0.21.2" }
