[package]
authors = [
    "Christopher Schwan <handgranaten-herbert@posteo.de>",
    "Alessandro Candido <candido.ale@gmail.com>",
    "Felix Hekhorn <felix.hekhorn@mi.infn.it>",
    "Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"
]
description = "Python bindings to PineAPPL"
name = "pineappl_py"
readme = "README.md"
publish = false

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.maturin]
name = "pineappl"

[lib]
name = "pineappl"
crate-type = ["cdylib"]

[dependencies]
itertools.workspace = true
ndarray.workspace = true
numpy.workspace = true
pineappl.workspace = true
pyo3.workspace = true
