[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL is not an extension of APPLgrid"
name = "pineappl_v0"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.48"
bincode = "1.3.3"
bitflags = "2.4.2"
enum_dispatch = "0.3.7"
float-cmp = { default-features = false, version = "0.9.0" }
itertools = "0.10.1"
ndarray = { features = ["serde"], version = "0.15.4" }
rustc-hash = "1.1.0"
serde = { features = ["derive"], version = "1.0.130" }
thiserror = "1.0.30"
