[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "PineAPPL is not an extension of APPLgrid"
name = "pineappl_v0"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bincode = "1.3.3"
enum_dispatch = "0.3.7"
ndarray = { features = ["serde"], version = "0.15.4" }
serde = { features = ["derive"], version = "1.0.130" }
thiserror = "1.0.30"
