[package]
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
description = "Reads PineAPPL files written by PineAPPL version 0.x"
name = "pineappl_v0"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bincode.workspace = true
enum_dispatch.workspace = true
ndarray = { features = ["serde"], workspace = true }
serde.workspace = true
thiserror.workspace = true
