[package]
name = "xtask"
description = "Cargo applet for PineAPPL specific tasks"
publish = false

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { features = ["string"], workspace = true }
clap_mangen.workspace = true
enum_dispatch.workspace = true
pineappl_cli.workspace = true
